mtom in progress

--- a/mindreading/minimal theory of mind (new version)/minimal theory of mind.nv.tex
+++ b/mindreading/minimal theory of mind (new version)/minimal theory of mind.nv.tex
@@ -56,10 +56,12 @@ Theory of Mind, False Belief, belief, perception, development, comparative
 What could someone represent that would enable her to track, at least within limits, perceptions, beliefs including false beliefs, and other propositional attitudes? 
 One answer is obvious: she might track these things by virtue of representing them as such, that is, by representing perceptions, beliefs, and other propositional attitudes as such.
 Our aim in what follows is to identify another, less obvious answer.
-There is a form of cognition---minimal theory of mind---which does not involve representing propositional attitudes as such but is  rich enough to enable systematic success on tasks held to be acid tests for theory of mind cognition including many false belief tasks.
+There is a form of cognition---minimal theory of mind---which does not involve representing propositional attitudes as such but does involve representing simpler, relational mental states which could, within limits, enable one to track propositional attitudes such as beliefs.
+Minimal theory of mind 
+is  rich enough to enable systematic success on tasks held to be acid tests for theory of mind cognition including many false belief tasks.
 As we will explain, this has consequences 
 for interpreting a range of findings concerning infants', adults' and nonhumans' performances on theory of mind tasks.
-It may also help us to understand what enables those with limited cognitive resources or little conceptual sophistication, such as infants, chimpanzees, scrub-jays and human adults under load, to track, within limits, facts about perceptions and beliefs.
+It may help us to understand what enables those with limited cognitive resources or little conceptual sophistication, such as infants, chimpanzees, scrub-jays and human adults under load, to track, within limits, facts about perceptions and beliefs.
 
 In this section we defend explain our question; in the next section we introduce the findings which motivate facing it before starting to answer it in the third section.
 
@@ -99,6 +101,22 @@ She has a theory of mind ability while possibly lacking any theory of mind cogni
 It should be uncontroversial that some theory of mind abilities do not necessarily involve any theory of mind cognition at all. 
 Our question concerns abilities to track what others perceive and believe, including their false beliefs; these have been central in psychological research.
 Can anything less than full-blown theory of mind cognition  explain systematic success on a range of false belief tasks?
+We do not aim to argue that someone could track beliefs, true and false, without any theory of mind cognition at all.
+Our concern is rather with the construction of a minimal form of theory of mind cognition.
+As we shall explain, minimal theory of mind does involve representing  belief-like  states, but it does not involve representing beliefs or other propositional attitudes as such.
+
+%The notion that theory of mind cognition could involve representing non-propositional counterparts of belief 
+%According to Davidson, 
+%\begin{quote}
+%`We are stuck with our two main ways of describing and explaining things, one which treats objects and events as mindless, and the other which treats objects and events as having propositional attitudes. I see no way of bridging the gap by introducing an intermediate vocabulary.' \citep[p.\ 697]{Davidson:2003bw}
+%\end{quote}
+%It may be tempting to dismiss this assertion on the grounds that we can readily describe an infant as excited by a clapping game, or as preferring one toy to another. 
+%On the surface at least, these descriptions seem neither to involve propositional attitudes nor to involve treating the infant as mindless; it seems there are non-propositional forms of excitement and preference which are nevertheless mental states.
+%
+%Even so, Davidson is right that there is a genuine difficulty when it comes to understanding non-propositional counterparts of attitudes like belief and perception.  We cannot rely entirely on commonsense here because our commonsense concepts of perception, belief, intention and action exhibit a form of holism: we grasp them only if we understand their interdependent roles in reason explanations (Davidson 1995b, 1995a). 
+%
+
+
 
 
 \section{Motivation}
@@ -107,39 +125,41 @@ not what anyone does represent
 but what someone could represent that would enable her, at least within limits, to track perceptions, beliefs and other propositional attitudes.
 The motivation for facing up to this question is, of course, partly empirical.
 
-Start with ordinary adult humans.
-Since these subjects can represent beliefs and other propositional attitudes as such, 
+Consider ordinary adult humans.
+Since they can represent beliefs and other propositional attitudes as such, 
 it is natural to assume that such representations underpin their abilities to track perceptions and beliefs.
 But is this natural assumption correct?
 
 To see that it might not be, consider a further question.
-Are processes in which representations of perceptions and beliefs feature automatic?
+Is tracking others' perceptions and beliefs automatic?
 Roughly speaking,
 a process is \emph{automatic} if whether it occurs is to a significant degree independent of its relevance to the particulars of the subject's motives and aims.
 (Note that a process may occur spontaneously without thereby being automatic.)  
-Some evidence suggests that, for ordinary adult humans, belief ascription is automatic.
+Some evidence suggests that, for ordinary adult humans, belief tracking is automatic.
 For example,
 \citet{kovacs_social_2010} asked adults to identify the location of a ball.
 They found that adults were significantly slower to identify the ball's location when an onlooker had a false belief about the location of the ball,
 even though the onlooker's belief was not relevant to the task at all.
-Relatedly, \citet{Samson:2010jm} provide evidence that identifying what another perceives is automatic;  this finding is indirectly supported by  evidence that identifying what another perceives is not disrupted by a secondary executive task \citep{qureshi:2010_executive}.
-Taken together, these findings suggest that, at least in adults, some processes involving representation of perception and belief are automatic.
+Relatedly, \citet{Samson:2010jm} provide evidence that identifying what another perceives is automatic;  this finding is indirectly supported by  evidence that tracking others' perceptions is not disrupted by a secondary executive task \citep{qureshi:2010_executive}.
+Taken together, these findings suggest that, at least in adults, tracking others' perceptions and beliefs is sometimes automatic.
 
 But there is also a body of evidence supporting a different conclusion.
 \citet{back:2010_apperly} found that subjects are significantly slower to answer an unexpected question about another's belief when that belief is false compared to when it is true \citep[see also][]{apperly:2006_belief}.
-This suggests that, at least in adults, belief ascription is not automatic.
-There is also evidence that, even in relatively simple situations, using representations of others' beliefs is not automatic \citep{Keysar:2003xu,apperly:2010_limits}.
-The case for nonautomaticity is indirectly supported by evidence that reasoning about perceptions and beliefs---and even merely holding in mind what another believes, where no inference is required---involves a measurable processing cost  \citep{apperly:2008_back,apperly:2010_limits}, consumes attention and working memory in fully competent adults (\citealp{en_1698, lin:2010_reflexively, en_1547} experiments 4-5), may require inhibition \citep{bull:2008_role} and makes demands on executive function \citep{apperly:2004_frontal,samson:2005_seeing}.
-These findings, taken together, suggest that some processes involving representation of perception and belief are not automatic.
+This suggests that, at least in adults, belief tracking is not automatic.
+There is also evidence that, even in relatively simple situations, 
+using facts about others' beliefs is not automatic \citep{Keysar:2003xu,apperly:2010_limits}.
+The case for nonautomaticity is indirectly supported by evidence that tracking perceptions and beliefs---and even merely holding in mind what another believes, where no inference is required---involves a measurable processing cost  \citep{apperly:2008_back,apperly:2010_limits}, consumes attention and working memory in fully competent adults (\citealp{en_1698, lin:2010_reflexively, en_1547} experiments 4-5), may require inhibition \citep{bull:2008_role} and makes demands on executive function \citep{apperly:2004_frontal,samson:2005_seeing}.
+These findings, taken together, suggest that tracking others' perceptions and beliefs is sometimes not automatic.
 
-The question was whether, in adult humans, the processes in which representations of perception and belief feature are automatic.  
-We have just seen that there is a systematic incongruity in the evidence.
-The incongruity  cannot easily be explained away by appeal to simple methodological factors or extraneous task demands.
-For instance, it may be tempting to suppose that the incongruity can be explained by distinguishing between linguistic and nonlinguistic tasks.  
-But belief ascription fails to be automatic even on some nonlinguistic tasks \citep[e.g.][]{apperly:2004_frontal}, and we know of no reason to assume that belief ascription could not be automatic on verbal theory of mind tasks.
+The question was whether, in adult humans,  tracking perception and belief is automatic.  
+If we assume, further, that either all such processes are automatic or else none are, then the evidence creates a conflict.
+This conflict  cannot easily be explained away by appeal to simple methodological factors or extraneous task demands.
+For instance, it may be tempting to suppose that the conflict can be explained by distinguishing between linguistic and nonlinguistic tasks.  
+But belief ascription may fail to be automatic even on some nonlinguistic tasks \citep[e.g.][]{apperly:2004_frontal}, and we know of no reason to assume that belief ascription could not be automatic on some linguistic theory of mind tasks (such as those where spontaneous tracking is already established, e.g.\ \citet{ferguson_listeners_2012}).
 
-If the incongruity is not a methodological artefact, how should we interpret the evidence?
+If the conflict is not a methodological artefact, how should we interpret the evidence?
 Perhaps it should be taken at face value.
+This means we must reject the assumption that tracking others' perceptions and beliefs is either always automatic or else always nonautomatic.
 In other cases, such as number and causation, it is already quite widely accepted that, in adult humans, some abilities to track these things are automatic whereas others are not.\footnote{
 On number: \citet{trick:1994_small};
 on causation: \citet{Michotte:1946nz}, \citet{Scholl:2004dx}.
@@ -154,8 +174,11 @@ According to them,
 adults may enjoy efficient but inflexible forms of theory of mind cognition in addition to the full-blown form which involves representing beliefs and other propositional attitudes as such.
 While aspects of this conjecture have already been tested \citep[]{Samson:2010jm, en_2397, surtees_direct_2011}, it raises two complementary questions (as Apperly \& Butterfill themselves note).  
 
-First, why isn't all theory of mind cognition automatic?
-Even without knowing in any detail how theory of mind cognition is implemented, it is plausible that what makes full-blown theory of mind cognition demanding is some feature, or combination of features, of the propositional attitudes.%
+First, why isn't tracking belief and perception always automatic?
+Consider what is involved in representing beliefs and other propositional attitudes.
+On any standard view, propositional attitudes form complex causal structures, have arbitrarily nest-able contents, interact with each other in uncodifiably complex ways and are individuated by their causal and normative roles in explaining thoughts and actions \citep[]{en_809, en_249}.  
+If anything should consume working memory and other scarce cognitive resources, it is surely representing states with this combination of properties.
+So even without knowing in any detail how theory of mind cognition is implemented, it is plausible that some feature, or combination of features, of the propositional attitudes  makes full-blown theory of mind cognition demanding.%
 \footnote{
 Several hypotheses about which feature of the propositional attitudes explains why full-blown theory of mind cognition is cognitively and conceptually demanding have been defended \citep[e.g.][]{en_1263, en_634, en_1269, en_78, en_81, en_404, 	%en_687, %bibtex error authors and year too similar
 	en_643, en_1130}.  
@@ -163,16 +186,75 @@ More than one feature may contribute.
 We are agnostic about which feature or features are to blame.
 }  
 %
-On any standard view, propositional attitudes form complex causal structures, have arbitrarily nest-able contents, interact with each other in uncodifiably complex ways and are individuated by their causal and normative roles in explaining thoughts and actions \citep[]{en_809, en_249}.  If anything should consume working memory and other scarce cognitive resources, it is surely representing states with this combination of properties.
+A possible explanation, then, is this.
+Tracking perception or belief is not always automatic because 
+it sometimes involves representing propositional attitudes as such,
+which typically or always places demands on working memory, attention and executive function  that are incompatible with automaticity.
 
-Second, how could theory of mind cognition be automatic?
-Automatic processes do not usually significantly depend on inhibition, working memory or attention.
-***HERE
+
+Second, how could  tracking perceptions or beliefs ever be automatic?
+If we assumed that such tracking always involved propositional attitudes as such, this question would present a puzzle.
+For, as we saw, representing propositional attitudes as such generally places demands on working memory, attention and executive function that are incompatible with automaticity.
+In some cases these demands might be overcome through automatization in something like the way that initially effortful numerical operations can through practice become automatic.\footnote{
+On the automatization of simple sums, see \citet{lefevre:1988_cognitive}.
+For the suggestion that something similar might happen concerning mental states, see \citet{Suddendorf:2003co}.
+%which is also discussed by \citet[p.\ 961]{Apperly:2009ju}.
+}
+However, almost nothing is known about to what extent, if any, automatization occurs in theory of mind. 
+And in any case automatization can only explain the automaticity of routine inferences.
+So it is possible that automatization, although perhaps important, does not fully explain the automaticity of some of adult humans' perception- and belief-tracking abilities.
+A full explanation may  depend on showing that tracking perceptions and beliefs can be done without  representing beliefs or other propositional attitudes as such.
+
+This is a source motivation for our question about what someone could represent that would enable her to track perceptions and beliefs.
+The existence of both automatic and nonautomatic tracking of perceptions and beliefs in human adults 
+suggests (without decisively showing, of course), 
+contrary to a natural assumption mentioned above,
+that not all of their abilities to track perceptions and beliefs involve representing propositional attitudes as such.
+
+Additional motivation for our question comes from evidence for theory of mind abilities in young children and infants.
+Children in their second year use pointing to provide information to others \citep[]{en_1093} in ways that reflect a partner’s ignorance or knowledge \citep[]{en_1699}, as well as providing more information to ignorant than knowledgeable partners when making requests \citep[]{en_1140}.  One-year-old children also predict actions of agents with false beliefs about the locations of objects \citep[]{en_1092, en_1208} and choose different ways of interacting with others depending on whether their beliefs are true or false \citep[]{en_1783,Knudsen:2011fk,southgate:2010fb}.  And in much the way that irrelevant facts about the contents of others’ beliefs modulate adult subjects’ response times, such facts also affect how long 7-month-old infants look at some stimuli \citep[]{kovacs_social_2010}.
+
+What do these infants and young children represent that enables them, within limits, to track others’ beliefs and other propositional attitudes?   
+The most straightforward answer would be to suppose that they represent perceptions, beliefs and other propositional attitudes as such \citep[e.g.][]{en_1138, en_1691}.  
+But this answer faces several objections.  A body of evidence  suggests that representing beliefs requires conceptual sophistication, for it has a protracted developmental course stretching over several years \citep[]{en_87, en_89} and its acquisition is tied to the development of executive function \citep[]{en_410, en_1130} and language \citep[]{en_1209}.  Infants and young children are deficient in these.  
+Development of reasoning about beliefs in humans may also be facilitated by explicit training \citep[]{en_85} and environmental factors such as siblings \citep[]{en_507, en_1299}.  
+This is evidence that representations of belief in humans typically emerge from extensive participation in social interactions (as \citealp{en_1300} suggest).  
+If any of this is right, we must reject the hypothesis that infants are representing beliefs or other propositional attitudes as such.
+
+In principle one might suppose that infants and young childrens' abilities to track perception and belief 
+do not involve any theory of mind cognition at all
+but are instead based on 
+representations of nonintentional behaviour only.
+While it is possible in principle to explain some belief-tracking abilities by appeal to hypothetical behaviour reading capacities,\footnote{ 
+ See \citet{perner:1988_developing,en_1168, en_1169}.
+}  
+there is ***objections ... too little is known 
+
+involve reasoning about behaviour only and so do not involve any theory of mind cognition at all.
+While it is possible that 
+
+do not involve any theory of mind cognition at all
+but are instead based on 
+representations of nonintentional behaviour only.\footnote{ 
+	On scrub-jays: \citet{en_1417};
+	 on chimpanzees: \citet{en_1413}; 
+	 on young children: \citet{perner:1988_developing,en_1168, en_1169}.
+}  
+Here we must be careful to distinguish two types of  hypothesis.
+One says of a particular group of subjects, nonhumans for instance, that their theory of mind abilities could in principle be fully explained by hypothetical behaviour reading capacities.
+
+
+%Some readers may doubt that tracking perceptions or beliefs is ever automatic.
+%Others may endorse automaticity while doubting our suggestion that automatic tracking requires cognitive efficiency and therefore cannot generally involve representing propositional attitudes as such.
+
+
+
+
 
 \section{The need for a constructive approach}
 Davidson ...
 
-This is reflected in the dichotomy between behaviour reading (P&Vonk) \& full-blown ToM (Baillargeon review).
+%This is reflected in the dichotomy between behaviour reading (P&Vonk) \& full-blown ToM (Baillargeon review).
 
 Davidson might be right about ordinary, commonsense psychology.
 
@@ -184,25 +266,11 @@ So a constructive approach is needed.
 
 
 
-There is a growing body of evidence that theory of mind abilities are widespread.  Scrub-jays selectively re-cache their food in ways that deprive competitors of knowledge of its location \citep[]{Clayton:2007fh}.  Chimpanzees select routes to approach food which conceal them from a competitor’s view \citep[]{en_1546}, and retrieve food using strategies that optimize their return given what a dominant competitor has seen \citep[]{en_1545}.  And children in their second year use pointing to provide information to others \citep[]{en_1093} in ways that reflect a partner’s ignorance or knowledge \citep[]{en_1699}, as well as providing more information to ignorant than knowledgeable partners when making requests \citep[]{en_1140}.  One-year-old children also predict actions of agents with false beliefs about the locations of objects \citep[]{en_1092, en_1208} and choose different ways of interacting with others depending on whether their beliefs are true or false \citep[]{en_1783,Knudsen:2011fk,southgate:2010fb}.  And in much the way that irrelevant facts about the contents of others’ beliefs modulate adult subjects’ response times, such facts also affect how long 7-month-old infants look at some stimuli \citep[]{kovacs_social_2010}.
-
 Is it already known what young children, chimpanzees or scrub-jays represent that enables them, within limits, to track others’ perceptions or beliefs?   
 Some hypotheses have been offered, 
 but each faces significant objections, as we shall briefly outline here.
 We do not suggest that these hypotheses are known to be false, only that they are not known to be true.
 This is what motivates articulating and testing  alternative hypotheses, such as the minimal theory of mind hypothesis we develop in following sections.
-
-
-
-
-
-The most straightforward answer would be to suppose that they represent perceptions, beliefs and other propositional attitudes as such 
-(see, e.g.\ \citealp{en_1138} and \citealp{en_1691} on infants).  
-But this answer faces several objections.  A body of evidence from humans suggests that representing beliefs requires conceptual sophistication, for it has a protracted developmental course stretching over several years \citep[]{en_87, en_89} and its acquisition is tied to the development of executive function \citep[]{en_410, en_1130} and language \citep[]{en_1209}.  Infants, scrub-jays and chimpanzees are all deficient in these.  Development of reasoning about beliefs in humans may also be facilitated by explicit training \citep[]{en_85} and environmental factors such as siblings \citep[]{en_507, en_1299}.  
-This is evidence that representations of belief in humans typically emerge from extensive participation in social interactions (as \citealp{en_1300} suggest).  
-If any of this is right, we must reject the hypothesis that infants, scrub jays and chimpanzees are representing propositional attitudes like belief as such.
-
-
 
 
 
@@ -230,7 +298,7 @@ Key studies include
 	\citet{Saylor:2007pj} and
 	\citet{Baldwin:2008mw}.
 }
-Applied to infants, scrub-jays or chimpanzees several objections have been raised \citep[]{Apperly:2009ju,en_1553, Clayton:2007fh, en_1691, en_1393}. 
+Applied to infants, scrub-jays or chimpanzees several objections have been raised \citep[]{Apperly:2009ju,en_1553, Clayton:2007fh, en_1691, Suddendorf:2003co}. 
 
 The first hypothesis is that, for some subjects, some actual theory of mind abilities can be explained by those subjects actual behaviour reading capacities.
 This is plausible, although relatively little is known about actual behaviour reading capacities.\footnote{
@@ -241,7 +309,7 @@ Key studies include
 	\citet{Saylor:2007pj} and
 	\citet{Baldwin:2008mw}.
 }
-This hypothesis faces several objections \citep[]{en_1553, Clayton:2007fh, en_1691, en_1393}. 
+This hypothesis faces several objections \citep[]{en_1553, Clayton:2007fh, en_1691, Suddendorf:2003co}. 
 
 
 
